# logiops

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  TESTED.md  example_logiM650Lmouse.cfg  install.sh  logid.example.cfg  thumbwheel_fix.patch  uninstall.sh
.github/: FUNDING.yml
.github/workflows/: build-test.yml  make-release.yml  release.yml
cmake/: FindDBusCXX.cmake
dbus/: logid.xml  policy.xml
src/liblogiops/: CMakeLists.txt
src/liblogiops/liblogiops_client/: Control.cpp  dbus_client.h
src/logictl/: CMakeLists.txt  Control.cpp  Root.cpp  Socket.cpp  dbus_client.h  function_map.cpp  logictl.cpp  logictl.h
src/logictl/client/: Control.h  Socket.cpp  Socket.h
src/logid/: Actions.cpp  Actions.h  CMakeLists.txt  Configuration.cpp  Configuration.h  DBusServer.cpp  DBusServer.h  Device.cpp  Device.h  DeviceFinder.cpp  DeviceFinder.h  DeviceManager.cpp  DeviceManager.h  DeviceMonitor.cpp  DeviceMonitor.h  EvdevDevice.cpp  EvdevDevice.h  IPCServer.cpp  IPCServer.h  InputDevice.cpp  InputDevice.h  Receiver.cpp  Receiver.h  ipc_defs.h  logid.cpp  logid.h  logid.service.cmake  logid.service.in  logiops-dbus.conf.in  util.cpp  util.h
src/logid/actions/: Action.cpp  Action.h  AxisAction.cpp  AxisAction.h  ChangeDPI.cpp  ChangeDPI.h  ChangeHostAction.cpp  ChangeHostAction.h  ChangeProfile.cpp  ChangeProfile.h  CycleDPI.cpp  CycleDPI.h  GestureAction.cpp  GestureAction.h  KeypressAction.cpp  KeypressAction.h  NullAction.cpp  NullAction.h  SwitchProfileAction.cpp  SwitchProfileAction.h  ToggleHiresScroll.cpp  ToggleHiresScroll.h  ToggleHiresScrollAndSmartShift.cpp  ToggleHiresScrollAndSmartShift.h  ToggleSmartShift.cpp  ToggleSmartShift.h
src/logid/actions/gesture/: AxisGesture.cpp  AxisGesture.h  Gesture.cpp  Gesture.h  IntervalGesture.cpp  IntervalGesture.h  NullGesture.cpp  NullGesture.h  ReleaseGesture.cpp  ReleaseGesture.h  ThresholdGesture.cpp  ThresholdGesture.h
src/logid/backend/: Error.cpp  Error.h  EventHandlerList.h  defs.h
src/logid/backend/dj/: Error.cpp  Error.h  Receiver.cpp  Receiver.h  ReceiverMonitor.cpp  ReceiverMonitor.h  Report.cpp  Report.h  defs.h
src/logid/backend/hidpp/: Device.cpp  Device.h  Report.cpp  Report.h  defs.h
src/logid/backend/hidpp10/: Device.cpp  Device.h  Error.cpp  Error.h  Receiver.cpp  Receiver.h  ReceiverMonitor.cpp  ReceiverMonitor.h  defs.h
src/logid/backend/hidpp20/: Device.cpp  Device.h  Error.cpp  Error.h  EssentialFeature.cpp  EssentialFeature.h  Feature.cpp  Feature.h  feature_defs.h
src/logid/backend/hidpp20/features/: AdjustableDPI.cpp  AdjustableDPI.h  ChangeHost.cpp  ChangeHost.h  DeviceName.cpp  DeviceName.h  FeatureSet.cpp  FeatureSet.h  HapticFeedback.cpp  HapticFeedback.h  HiresScroll.cpp  HiresScroll.h  ReprogControls.cpp  ReprogControls.h  Reset.cpp  Reset.h  Root.cpp  Root.h  SmartShift.cpp  SmartShift.h  ThumbWheel.cpp  ThumbWheel.h  WirelessDeviceStatus.cpp  WirelessDeviceStatus.h
src/logid/backend/raw/: DeviceMonitor.cpp  DeviceMonitor.h  EventHandler.h  IOMonitor.cpp  IOMonitor.h  RawDevice.cpp  RawDevice.h  defs.h
src/logid/config/: config.cpp  group.h  map.h  schema.h  types.h  util.cpp
src/logid/features/: DPI.cpp  DPI.h  DeviceFeature.h  DeviceStatus.cpp  DeviceStatus.h  HapticFeedback.cpp  HapticFeedback.h  HiresScroll.cpp  HiresScroll.h  RemapButton.cpp  RemapButton.h  SmartShift.cpp  SmartShift.h  ThumbWheel.cpp  ThumbWheel.h
src/logid/ipc/: Device.cpp  Device.h  Root.cpp  Root.h  dbus_server.h  util.cpp  util.h
src/logid/util/: ExceptionHandler.cpp  ExceptionHandler.h  log.cpp  log.h  mutex_queue.h  task.cpp  task.h  thread.cpp  thread.h  worker_thread.cpp  worker_thread.h  workqueue.cpp  workqueue.h
